test/expected/declare_hl.out
declare x as short long
        ^
9: error: "short long int" is illegal for built-in type
